2006-04-15  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callshistory.h, src/gui/callshistory.cpp: Made the
	gm_calls_history_get_calls function more readable/understandable,
	thanks to Jan Schampera.

2006-04-14  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed #337795, thanks Michael Rickmann.

2006-04-12  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp: Partially applied Michael Rickmann's fix for
	#337799 (the number of buffers). The rest of the patch is still under
	discussion.
	* NEWS: Mentioned previous.

2006-04-12  Julien Puydt  <jpuydt@free.fr>

	* doc/using_dbus.html: Added ; documents what can be done with ekiga
	through dbus.

2006-04-11  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp src/endpoints/sip.h src/gui/accounts.cpp:
	Set the From field to the address of record of the default SIP account 
	(Fixes #334457).

2006-04-10  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made use of the new po/LINGUAS, to allow translators
	to work only in po/. Thanks Brian Pepple  <bdpepple@gmail.com>.
	Fixes #337854.

2006-04-10  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed command-line parsing on win32 (fixes bug
	#337797, thanks Michael Rickmann).
	* NEWS: Mentioned the above.

2006-04-09  Jan Schampera <jan.schampera@unix.net>

	* NEWS, src/gui/chat.cpp: Fixed chat text formatting corruption
	Bug #335794 (thanks Simon Wood)

2006-04-09  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed #337794, patch by Michael Rickmann.

2006-04-09  Julien Puydt  <jpuydt@free.fr>

	* lib/gui/gmtextviewaddon.c: Fixed #336793.

2006-04-09  Jan Schampera <jan.schampera@unix.net>

	* NEWS, src/gui/accounts.cpp, lib/gui/gmpreferences.c,
	src/gui/addressbook.cpp, src/gui/history.cpp,
	src/gui/callshistory.cpp, src/gui/tools.cpp: made most
	dialogs/popups closable by ESC (partially fixes #337494)

2006-04-03  Julien Puydt  <jpuydt@free.fr>

	* TODO: Removed the link to wiki.seconix.com. Fixes #336962.
