@@ -1132,23 +1132,17 @@ gm_mw_init_menu (GtkWidget *main_window)
       
       GTK_MENU_NEW(_("_Help")),
 
-#ifndef DISABLE_GNOME
        GTK_MENU_ENTRY("help", _("_Contents"),
                      _("Get help by reading the Ekiga manual"),
                      GTK_STOCK_HELP, GDK_F1, 
                      GTK_SIGNAL_FUNC (help_cb), NULL, TRUE),
-       
+#ifndef DISABLE_GNOME
       GTK_MENU_ENTRY("about", _("_About"),
 		     _("View information about Ekiga"),
 		     GNOME_STOCK_ABOUT, 0, 
 		     GTK_SIGNAL_FUNC (about_callback), (gpointer) main_window,
 		     TRUE),
 #else
-      GTK_MENU_ENTRY("help", _("_Contents"),
-                     _("Get help by reading the Ekiga manual"),
-                     GTK_STOCK_HELP, GDK_F1, 
-                     NULL, NULL, FALSE),
-       
       GTK_MENU_ENTRY("about", _("_About"),
 		     _("View information about Ekiga"),
 		     NULL, 'a', 
