@@ -48,6 +48,7 @@ text chats (#336793, Julien Puydt).
 - Set the From field to the address of record of the default SIP account (#334457, Damien Sandras)
 - Partially fixed stuttering on win32 (#337799, Michael Rickmann)
 - Made the use of SDL more reliable on win32 (#337795, Michael Rickmann)
+- Made the help work on win32 (#337798, Michael Rickmann)
 
 
 Fixes in OPAL/PWLIB/Ekiga since 2.00 Beta2:
