@@ -1,5 +1,10 @@
 2006-04-15  Julien Puydt  <jpuydt@free.fr>
 
+	* src/gui/callbacks.cpp, src/gui/main.cpp: Fixed #337798, thanks to
+	Michael Rickmann.
+
+2006-04-15  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/callshistory.h, src/gui/callshistory.cpp: Made the
 	gm_calls_history_get_calls function more readable/understandable,
 	thanks to Jan Schampera.
